--- a/app/assets/stylesheets/apiv1/shared/_constants.css.scss
+++ b/app/assets/stylesheets/apiv1/shared/_constants.css.scss
@@ -75,3 +75,6 @@
 .full-width {
   width: 100%;
 }
+.buffer20 {
+  margin: 20px;
+}
